--- a/react-learn/package.json
+++ b/react-learn/package.json
@@ -9,6 +9,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
+    "react-transition-group": "^4.4.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -35,5 +36,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy":"http://api.duyiedu.com"
+  "proxy": "http://api.duyiedu.com"
 }
