--- a/react-learn/package.json
+++ b/react-learn/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
     "react-transition-group": "^4.4.1",
+    "uuid": "^8.3.2",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
