--- a/react-learn/package.json
+++ b/react-learn/package.json
@@ -14,6 +14,7 @@
     "react-scripts": "4.0.1",
     "react-transition-group": "^4.4.1",
     "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
     "uuid": "^8.3.2",
     "web-vitals": "^0.2.4"
   },
