--- a/react-learn/package.json
+++ b/react-learn/package.json
@@ -7,6 +7,8 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "animate.css": "^4.1.1",
+    "is-promise": "^4.0.0",
+    "loadash": "^1.0.0",
     "query-string": "^6.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -15,6 +17,7 @@
     "react-transition-group": "^4.4.1",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
+    "redux-promise": "^0.6.0",
     "redux-thunk": "^2.3.0",
     "uuid": "^8.3.2",
     "web-vitals": "^0.2.4"
