--- a/react-learn/package.json
+++ b/react-learn/package.json
@@ -18,6 +18,7 @@
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-promise": "^0.6.0",
+    "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
     "uuid": "^8.3.2",
     "web-vitals": "^0.2.4"
